Updates to plots and data collection methods

--- a/vast_challenge_plots.ipynb
+++ b/vast_challenge_plots.ipynb
@@ -190,6 +190,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(137, 11)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -238,6 +258,19 @@
    ],
    "source": [
     "top_ten_comms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sherrell Biebel         32.0\n",
+    "Juan Walsh               3.0\n",
+    "Laurice Eichenberg       2.0\n",
+    "Garrett Sanfilippo       2.0\n",
+    "Sheilah Stachniw         2.0\n",
+    "Jaunita Westen           2.0\n",
+    "Timothy Gibson           2.0\n"
    ]
   },
   {
